--- a/pom.xml
+++ b/pom.xml
@@ -55,5 +55,10 @@
             <version>1.1.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.2</version>
+        </dependency>
     </dependencies>
 </project>
